--- a/Frontend/frontend/src/Components/Layout/Header/Header.css
+++ b/Frontend/frontend/src/Components/Layout/Header/Header.css
@@ -1,3 +1,16 @@
 .Header {
-	
+    background-color: #1a3855;
+    color: #ffffff;
+    padding: 20px;
+    text-align: center;
+    border-bottom: 2px solid #495057;
+}
+.HeaderTitle {
+    font-size: 2.5rem;
+    margin: 0;
+}
+.HeaderSubtitle {
+    font-size: 1.25rem;
+    margin: 10px 0 0;
+    color: #adb5bd;
 }
