--- a/Frontend/frontend/src/Components/Pages/AdminPages/AllAppointments/AllAppointments.css
+++ b/Frontend/frontend/src/Components/Pages/AdminPages/AllAppointments/AllAppointments.css
@@ -5,7 +5,8 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 800px;
     margin: 20px auto;
-    width: 100%;
+    width: auto;
+    overflow-y: scroll;
 }
 
 .AllAppointments h4 {
